Fixed main height on mobile

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -63,6 +63,12 @@ main {
   z-index: 1000;
 }
 
+@media screen and (max-width: 600px) {
+  main {
+    height: 400px;
+  }
+}
+
 
 .flexy {
   display: flex;
